[package]
name = "speed-rs-core"
version = "0.2.0"
edition = "2021"
authors = ["Le Thanh Long <longlt201203@gmail.com>"]
description = "A core HTTP handling server library in Rust, providing low-level HTTP server implementation."
license = "MIT"
repository = "https://github.com/longlt201203/speed-rs-core"
keywords = ["http", "server", "http-server", "web"]
categories = ["web-programming", "asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.192"
serde_json = "1.0.108"
serde_qs = "0.12.0"
